Edit click-drag image to be green, fix header text break on some pages.

--- a/the-college-dump/style.css
+++ b/the-college-dump/style.css
@@ -174,6 +174,7 @@ ul.tabs li a:hover, #ads-category-content ul.tabs li a.current {
 
 #ad-page-title h2 {
 	color: #fff;
+	float: none !important;
 }
 
 #ad-page-title h2 a {
@@ -194,6 +195,9 @@ ul.tabs li a:hover, #ads-category-content ul.tabs li a.current {
 	color: #fff !important;
 }
 
+.ui-slider .ui-slider-handle {
+	background-image: url(images/range-drag-point.png) !important;
+}
 
 
 /* Footer */
